--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My<span>Book</span>List</h1>
+	<div>
+	<lable>Title</lable>
+	<input type="text" class="title">
+	<lable>Author</lable>
+	<input type="text" class="author">
+	<lable>ISBN#</lable>
+	<input type="text" class="isbn">
+	<button onclick="insert_Row()">Add Book</button>
+	</div>
+	<table id="sampleTable">
+		<tr class="hrLine">
+			<th>Title</th>
+			<th>Author</th>
+			<th>ISBN#</th>
+			<th></th>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
