--- a/main.html
+++ b/main.html
@@ -12,15 +12,15 @@
 	<form>
 		 <div class="form-group">
 	<lable>Title</lable>
-	<input type="text" class="title">
+	<input type="text" id="title">
 		 </div>
 		 <div class="form-group">
 	<lable>Author</lable>
-	<input type="text" class="author">
+	<input type="text" id="author">
 			 </div>
 		 <div class="form-group">
 	<lable>ISBN#</lable>
-	<input type="text" class="isbn">
+	<input type="text" id="isbn">
 			 </div>
 	<button onclick="insert_Row()">Add Book</button>
 	</form>
