--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 	<lable>ISBN#</lable>
 	<input type="text" id="isbn">
 			 </div>
-	<button onclick="insert_Row()">Add Book</button>
+	<button id="submit" onclick="insert_Row()">Add Book</button>
 	</form>
 	<table id="sampleTable">
 		<tr>
