--- a/main.html
+++ b/main.html
@@ -9,29 +9,38 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>My<span>Book</span>List</h1>
-	<form>
-		 <div class="form-group">
-	<lable>Title</lable>
-	<input type="text" id="title">
-		 </div>
-		 <div class="form-group">
-	<lable>Author</lable>
-	<input type="text" id="author">
-			 </div>
-		 <div class="form-group">
-	<lable>ISBN#</lable>
-	<input type="text" id="isbn">
-			 </div>
-	<button id="submit" onclick="insert_Row()">Add Book</button>
-	</form>
-	<table id="sampleTable">
-		<tr>
-			<th>Title</th>
-			<th>Author</th>
-			<th>ISBN#</th>
-			<th></th>
-		</tr>
-	</table>
+
+<div>
+    <form id="bookForm">
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" id="title" class="title" required>
+        </div>
+
+        <div class="form-group">
+            <label for="author">Author</label>
+            <input type="text" id="author" class="author" required>
+        </div>
+
+        <div class="form-group">
+            <label for="isbn">ISBN#</label>
+            <input type="text" id="isbn" class="isbn" required>
+        </div>
+
+        <button type="submit">Add Book</button>
+    </form>
+</div>
+
+<table id="sampleTable">
+    <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th>ISBN#</th>
+        <th>Actions</th>
+    </tr>
+</table>
+<hr>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
