--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
             <input type="text" id="isbn" class="isbn" required>
         </div>
 
-        <button  id="submit">Add Book</button>
+        <button  type="submit">Add Book</button>
     </form>
 </div>
 
