--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<h1>My<span>Book</span>List</h1>
 
 <div>
-    <form id="book-list">
+    <form id="bookForm">
         <div class="form-group">
             <label for="title">Title</label>
             <input type="text" id="title" class="title" required>
@@ -31,7 +31,7 @@
     </form>
 </div>
 
-<table id="sampleTable" class="table-striped">
+<table id="book-list" >
     <tr>
         <th>Title</th>
         <th>Author</th>
