--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
     </form>
 </div>
 
-<table id="book-list" >
+<table id="book-list" class="table-striped">
     <tr>
         <th>Title</th>
         <th>Author</th>
