--- a/main.html
+++ b/main.html
@@ -31,8 +31,8 @@
     </form>
 </div>
 
-<table class="table table-striped">
-    <thead  id="book-list">
+<table id="book-list" class="table table-striped">
+    <thead>
         <tr>
             <th>Title</th>
             <th>Author</th>
