--- a/main.html
+++ b/main.html
@@ -40,15 +40,7 @@
             <th>Actions</th>
         </tr>
     </thead>
-    <tbody>
-        
-		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-    </tbody>
+    <tbody></tbody>
 </table>
 
 
